tests/miniJava/neg/000838_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = if new int [ 0 ] ; } }
